# SouthGUI

./: .gitmodules  README.md
cmake/: Findimgui.cmake  Findkiero.cmake  Findminhook.cmake
src/: CMakeLists.txt  hook.cpp  hook.h  init.cpp  plugin.cpp  plugin.h
src/local/: CMakeLists.txt  dx.cpp  dx.h  main.cpp
